--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@next/font": "^13.1.5",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "standard": "^17.0.0",
+    "react-icons": "^4.7.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.5",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "standard": "^17.0.0",
     "tailwindcss": "^3.2.4"
   },
   "lint": "standard",
